Fix failed details not showing, add searching for inputs with timeout

--- a/src/frontend/src/components/activity/LoginHistoryDetails.scss
+++ b/src/frontend/src/components/activity/LoginHistoryDetails.scss
@@ -25,5 +25,6 @@
   }
   .login-history-details-content {
     padding: 8px;
+    width: 300px;
   }
 }
